--- a/layout_parts/q6/index.html
+++ b/layout_parts/q6/index.html
@@ -41,7 +41,7 @@
             <!-- Q6-1の回答はここに書いてね -->
             <!-- 新たにタグは追加しなくてもできます。 -->
             <div class="q6__box">
-              <div>
+              <div class="left-box">
                 <p>text-align</p>
               </div>
             </div>
@@ -54,7 +54,9 @@
             <!-- Q6-1の回答はここに書いてね -->
             <!-- 新たにタグは追加しなくてもできます。 -->
             <div class="q6__box">
-              <p>margin</p>
+              <div class="right-box">
+                <p>margin</p>
+              </div>  
             </div>
             <!-- Q6-1の回答はここに書いてね -->
           </div>
@@ -84,10 +86,10 @@
           <!-- Q6-2の回答はここに書いてね -->
           <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
           <!-- 新たにタグは追加しなくてもできます。 -->
-          <div class="q6 q6--around">
-            <div>
-              <p>table</p>
-            </div>
+          <div class="q6 q6--around is-table">
+            <div class="q6__box">
+                <p class="q6__box__text">table</p>
+            </div>  
           </div>
           <!-- Q6-2の回答はここに書いてね -->
           <!--
@@ -99,8 +101,8 @@
           <!-- Q6-2の回答はここに書いてね -->
           <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
           <!-- 新たにタグは追加しなくてもできます。 -->
-          <div class="q6 q6--around">
-            <p>flex</p>
+          <div class="q6 q6--around is-flex">
+              <p class="q6__box__text">flex</p>    
           </div>
           <!-- Q6-2の回答はここに書いてね -->
           <div class="q6 q6--position">
@@ -115,7 +117,7 @@
             <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
             <!-- 新たにタグは追加しなくてもできます。 -->
             <div class="q6__box is-stable">
-              <p class="q6__box__inner">position固定</p>
+                  <p class="q6__box__inner">position固定</p>
             </div>
             <!-- Q6-2の回答はここに書いてね -->
             <!--
@@ -129,7 +131,7 @@
             <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
             <!-- 新たにタグは追加しなくてもできます。 -->
             <div class="q6__box is-flexible">
-              <p class="q6__box__inner">position可変</p>
+                  <p class="q6__box__inner">position可変</p>  
             </div>
             <!-- Q6-2の回答はここに書いてね -->
           </div>
