レビュー修正終わりました

--- a/layout_parts/q6/index.html
+++ b/layout_parts/q6/index.html
@@ -40,9 +40,9 @@
             -->
             <!-- Q6-1の回答はここに書いてね -->
             <!-- 新たにタグは追加しなくてもできます。 -->
-            <div class="q6__box">
-              <div class="left-box">
-                <p>text-align</p>
+            <div class="q6__box is-textalign">
+              <div class="q6__box__inner">
+                <p class="q6__box__text">text-align</p>
               </div>
             </div>
             <!-- Q6-1の回答はここに書いてね -->
